Update server definitions for local and sandbox Swagger servers
